# androidH265Codec

./: cuc_ieschool.h265
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/ican/ytx/com/h265decode/: ExampleInstrumentedTest.java
app/src/androidTest/java/ican/ytx/com/xiaomi/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/include/: AndroidH265Decoder.h  AndroidH265DecoderJni.h  H265Decoder.h  x265_config.h
app/src/main/cpp/source/: AndroidH265Decoder.cpp
app/src/main/cpp/src/: AndroidH265DecoderJni.cpp  H265Decoder.cpp
app/src/main/java/com/decoder/xiaomi/: H265Decoder.java  MainActivity.java
app/src/main/java/ican/ytx/com/h265decode/: H265Decoder.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/ican/ytx/com/h265decode/: ExampleUnitTest.java
app/src/test/java/ican/ytx/com/xiaomi/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
